Fix Ventures portfolio spacing
Also:

* Extracts the portfolio venture into its own component.

--- a/src/components/home/Ventures/Portfolio/index.module.css
+++ b/src/components/home/Ventures/Portfolio/index.module.css
@@ -5,46 +5,9 @@
 .ventures {
   display: grid;
   grid-template-columns: 1fr;
-  grid-column-gap: 28px;
+  grid-column-gap: 20px;
   grid-row-gap: 28px;
   list-style-type: none;
-}
-
-.photo {
-  height: 224px;
-  margin-bottom: 20px;
-
-  z-index: 0;
-}
-
-.grey {
-  position: absolute;
-
-  top: 0;
-  left: 0;
-
-  width: 100%;
-  height: 100%;
-
-  pointer-events: none;
-
-  z-index: 1;
-
-  opacity: 1;
-
-  transition: opacity 0.3s ease-in-out;
-}
-
-.wrapper {
-  position: relative;
-}
-
-.item {
-  cursor: pointer;
-}
-
-.item:hover .grey {
-  opacity: 0;
 }
 
 .planet {
@@ -77,34 +40,10 @@
 @media (min-width: 768px) {
   .ventures {
     grid-template-columns: 1fr 1fr;
-    grid-row-gap: 56px;
-  }
-
-  .name {
-    font-size: 20px;
-    line-height: 28px;
   }
 
   .item:first-child {
     grid-column: 1 / span 2;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 28px;
-  }
-
-  .item:first-child .wrapper {
-    grid-column: 1 / span 2;
-  }
-
-  .item:first-child .name,
-  .item:first-child .description {
-    grid-column: 2 / span 1;
-  }
-
-  .photo,
-  .grey {
-    height: 452px;
-    margin-bottom: 28px;
   }
 
   .planet:nth-child(1) {
@@ -126,5 +65,12 @@
   .planet:nth-child(4) {
     top: 1270px;
     left: 42%;
+  }
+}
+
+@media (min-width: 950px) {
+  .ventures {
+    grid-column-gap: 28px;
+    grid-row-gap: 56px;
   }
 }
